# Market-Data-Dashboard

./: Main.py  README.md  binance_module.py  check_data.py  delme.py  market_data.db  pyproject.toml  requirements.txt
Alex/: binance_futures.py  binance_spot.py  env.py  rename_tables.py  stat_rows_by_1_hour.py  Переименовать_таблици_базы.py  вв.py
